# gen-go/models/workflow_summary.go
@@ -1,0 +1,115 @@
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+
+	"github.com/go-openapi/errors"
+)
+
+// WorkflowSummary workflow summary
+// swagger:model WorkflowSummary
+type WorkflowSummary struct {
+
+	// created at
+	CreatedAt strfmt.DateTime `json:"createdAt,omitempty"`
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// input
+	Input string `json:"input,omitempty"`
+
+	// last updated
+	LastUpdated strfmt.DateTime `json:"lastUpdated,omitempty"`
+
+	// namespace
+	Namespace string `json:"namespace,omitempty"`
+
+	// queue
+	Queue string `json:"queue,omitempty"`
+
+	// workflow-id's of workflows created as retries for this workflow
+	Retries []string `json:"retries"`
+
+	// workflow-id of original workflow in case this is a retry
+	RetryFor string `json:"retryFor,omitempty"`
+
+	// status
+	Status WorkflowStatus `json:"status,omitempty"`
+
+	// status reason
+	StatusReason string `json:"statusReason,omitempty"`
+
+	// tags: object with key-value pairs; keys and values should be strings
+	Tags map[string]interface{} `json:"tags,omitempty"`
+
+	// workflow definition
+	WorkflowDefinition *WorkflowDefinition `json:"workflowDefinition,omitempty"`
+}
+
+// Validate validates this workflow summary
+func (m *WorkflowSummary) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateRetries(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateStatus(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateWorkflowDefinition(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *WorkflowSummary) validateRetries(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Retries) { // not required
+		return nil
+	}
+
+	return nil
+}
+
+func (m *WorkflowSummary) validateStatus(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Status) { // not required
+		return nil
+	}
+
+	if err := m.Status.Validate(formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *WorkflowSummary) validateWorkflowDefinition(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.WorkflowDefinition) { // not required
+		return nil
+	}
+
+	if m.WorkflowDefinition != nil {
+
+		if err := m.WorkflowDefinition.Validate(formats); err != nil {
+			return err
+		}
+	}
+
+	return nil
+}
