# swagger.yml
@@ -149,14 +149,16 @@ paths:
         pageParameter: pageToken
       parameters:
         # TODO: Add date range filters.
+        # should be kept in sync with WorkflowQuery model
         - name: limit
+          default: 10  # TODO: this can be increased after ark support
+          maximum: 10000
+          in: query
+          type: integer
           description:
             Maximum number of workflows to return.
             Defaults to 10.
             Restricted to a max of 10,000.
-          in: query
-          type: integer
-          format: int32
         - name: oldestFirst
           in: query
           type: boolean
@@ -371,6 +373,16 @@ definitions:
       - "step-functions"
 
   Workflow:
+    allOf:
+      - $ref: '#/definitions/WorkflowSummary'
+      - type: object
+        properties:
+          jobs:
+            type: array
+            items:
+              $ref: '#/definitions/Job'
+
+  WorkflowSummary:
     type: object
     properties:
       id:
@@ -387,10 +399,6 @@ definitions:
         $ref: '#/definitions/WorkflowStatus'
       statusReason:
         type: string
-      jobs:
-        type: array
-        items:
-          $ref: '#/definitions/Job'
       namespace:
         type: string
       queue:
@@ -410,6 +418,7 @@ definitions:
         description: "tags: object with key-value pairs; keys and values should be strings"
         additionalProperties:
           type: object
+
 
   WorkflowStatus:
     type: string
@@ -634,3 +643,25 @@ definitions:
     properties:
       StartAt:
         type: string
+
+  # Should be kept in sync with getWorkflows API
+  WorkflowQuery:
+    type: object
+    required:
+      - workflowDefinitionName
+    properties:
+      workflowDefinitionName:
+        type: string
+      limit:
+        type: integer
+        default: 10
+        maximum: 10000
+      oldestFirst:
+        type: boolean
+      pageToken:
+        type: string
+      status:
+        $ref: '#/definitions/WorkflowStatus'
+      summaryOnly:
+        type: boolean
+        default: false
